fix: increase width of about section images for better visibility on small screens

--- a/rg_web/src/styles.scss
+++ b/rg_web/src/styles.scss
@@ -955,7 +955,7 @@ article th {
 
 @media screen and (max-width: 400px) {
   .about img {
-    width: 200px;
+    width: 300px;
     float: none;
     display: block;
     margin: 15px auto;
